# openair-hss

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README  README.md  oai-hss.patch
src/: CMakeLists.txt
src/common/: 3gpp_23.003.h  3gpp_23.003_xml.h  3gpp_23.401.h  3gpp_24.007.h  3gpp_24.008.h  3gpp_24.008_cc_ies.c  3gpp_24.008_common_ies.c  3gpp_24.008_gmm_ies.c  3gpp_24.008_gprs_common_ies.c  3gpp_24.008_mm_ies.c  3gpp_24.008_mm_ies_xml.c  3gpp_24.008_sm_ies.c  3gpp_24.008_sm_ies_xml.c  3gpp_24.301.h  3gpp_25.413.h  3gpp_29.274.h  3gpp_29.274_sm_ies.c  3gpp_29.274_xml.c  3gpp_33.401.h  3gpp_36.331.h  3gpp_36.331_xml.c  3gpp_36.401.h  3gpp_36.401_xml.h  3gpp_36.413.h  3gpp_36.413_xml.c  3gpp_36.443.h  3gpp_requirements.h  3gpp_requirements_23.246.h  3gpp_requirements_24.301.h  3gpp_requirements_29.468.h  3gpp_requirements_33.401.h  CMakeLists.txt  asn1_conversions.h  assertions.h  async_system_messages_def.h  async_system_messages_types.h  common_defs.h  common_dim.h  common_types.c  common_types.h  (+43 more)
src/fluid/: CMakeLists.txt
src/gtpv1-u/: CMakeLists.txt  gtp_mod_kernel.c  gtp_mod_kernel.h  gtp_tunnel_libgtpnl.c  gtp_tunnel_libgtpnl_marking_bearer.c  gtp_tunnel_openflow.c  gtp_tunnel_openflow_mosaic.cc  gtpv1u.h  gtpv1u_sgw_defs.h  gtpv1u_task.c  gtpv1u_teid_pool.c
src/gtpv2-c/: CMakeLists.txt
src/hss_rel14/: Makefile
src/m2ap/: CMakeLists.txt  m2ap_common.h  m2ap_mce.c  m2ap_mce.h  m2ap_mce_decoder.c  m2ap_mce_encoder.c  m2ap_mce_handlers.c  m2ap_mce_handlers.h  m2ap_mce_itti_messaging.c  m2ap_mce_itti_messaging.h  m2ap_mce_mbms_sa.c  m2ap_mce_mbms_sa.h  m2ap_mce_procedures.c  m2ap_mce_procedures.h  m2ap_mce_retransmission.h
src/mce_app/: CMakeLists.txt  mce_app_defs.h  mce_app_extern.h  mce_app_itti_messaging.c  mce_app_itti_messaging.h  mce_app_main.c  mce_app_mbms_service.c  mce_app_mbms_service_context.c  mce_app_mbms_service_context.h  mce_app_mbsfn_context.c  mce_app_mbsfn_scheduling.c  mce_app_statistics.c  mce_app_statistics.h
src/mme/: mme_ie_defs.h
src/mme_app/: CMakeLists.txt  mme_app_apn_selection.c  mme_app_apn_selection.h  mme_app_bearer.c  mme_app_bearer_context.c  mme_app_bearer_context.h  mme_app_capabilities.c  mme_app_context.c  mme_app_defs.h  mme_app_detach.c  mme_app_edns_emulation.c  mme_app_edns_emulation.h  mme_app_esm_procedures.c  mme_app_esm_procedures.h  mme_app_extern.h  mme_app_if.h  mme_app_if_nas_transport.c  mme_app_itti_messaging.c  mme_app_itti_messaging.h  mme_app_location.c  mme_app_main.c  mme_app_pdn_context.c  mme_app_pdn_context.h  mme_app_procedures.c  mme_app_procedures.h  mme_app_session_context.c  mme_app_session_context.h  mme_app_sgw_selection.c  mme_app_sgw_selection.h  mme_app_statistics.c  mme_app_statistics.h  mme_app_todo.c  mme_app_transport.c  mme_app_ue_context.c  mme_app_ue_context.h  mme_app_wrr_selection.c  mme_app_wrr_selection.h  mme_config.c  mme_config.h
src/mxap/: 3gpp_requirements_36.443.h  CMakeLists.txt  m2ap_common.c  m2ap_common.h  m2ap_mce_decoder.c  m2ap_mce_decoder.h  m2ap_mce_encoder.c  m2ap_mce_encoder.h  m2ap_mce_handlers.c  m2ap_mce_handlers.h  m2ap_mce_mbms_sa.c  m2ap_mce_mbms_sa.h  m2ap_mce_retransmission.c  mxap_mce.c  mxap_mce.h  mxap_mce_itti_messaging.c  mxap_mce_itti_messaging.h  mxap_mce_procedures.c  mxap_mce_procedures.h
src/nas/: 3gpp_24.301.h  3gpp_24.301_common_ies_xml.h  3gpp_24.301_esm_msg_xml.h  3gpp_24.301_ies_xml.c  3gpp_24.301_ies_xml.h  3gpp_requirements_24.301.h  CMakeLists.txt  MMEprocess.c  nas_itti_messaging.c  nas_itti_messaging.h  nas_mme_task.c  nas_network.c  nas_network.h  nas_proc.c  nas_proc.h  nas_procedures.c  nas_procedures.h  networkDef.h  securityDef.h
src/nas_new/: 3gpp_requirements_24.301.h  nas_proc.h  nas_procedures.c  nas_procedures.h  securityDef.h
src/nas_old/: 3gpp_24.301_emm_ies_xml.h  3gpp_24.301_esm_ies_xml.c  3gpp_24.301_esm_ies_xml.h  nas_itti_messaging.c  nas_itti_messaging.h  nas_mme_task.c  nas_network.h  nas_proc.c  nas_proc.h
src/oai_hss/: hss_main.c
src/oai_mme/: oai_mme.c  oai_mme.h  oai_mme_log.c
src/oai_sgw/: CMakeLists.txt  oai_sgw.c
src/s10/: CMakeLists.txt  s10_common.c  s10_common.h  s10_ie_formatter.c  s10_ie_formatter.h  s10_mme.h  s10_mme_session_manager.c  s10_mme_session_manager.h  s10_mme_task.c
src/s11/: CMakeLists.txt  s11_common.c  s11_common.h  s11_ie_formatter.c  s11_ie_formatter.h  s11_mme.h  s11_mme_bearer_manager.c  s11_mme_bearer_manager.h  s11_mme_peer_manager.c  s11_mme_remoteuereport_manager.c  s11_mme_remoteuereport_manager.h  s11_mme_session_manager.c  s11_mme_session_manager.h  s11_mme_task.c  s11_sgw.c  s11_sgw_bearer_manager.c  s11_sgw_remoteuereport_manager.c  s11_sgw_remoteuereport_manager.h  s11_sgw_session_manager.c
src/s1ap/: 3gpp_requirements_36.413.h  CMakeLists.txt  s1ap_common.c  s1ap_common.h  s1ap_handover_signaling_handler.c  s1ap_mme.c  s1ap_mme.h  s1ap_mme_decoder.c  s1ap_mme_decoder.h  s1ap_mme_encoder.c  s1ap_mme_encoder.h  s1ap_mme_gummei.c  s1ap_mme_gummei.h  s1ap_mme_handlers.c  s1ap_mme_handlers.h  s1ap_mme_itti_messaging.c  s1ap_mme_itti_messaging.h  s1ap_mme_nas_procedures.c  s1ap_mme_nas_procedures.h  s1ap_mme_retransmission.c  s1ap_mme_retransmission.h  s1ap_mme_ta.c  s1ap_mme_ta.h
src/s6a/: CMakeLists.txt  s6a_auth_info.c  s6a_cancel_loc.c  s6a_clear_loc.c  s6a_common.c  s6a_defs.h  s6a_dict.c  s6a_error.c  s6a_messages.h  s6a_notify.c  s6a_peer.c  s6a_reset.c  s6a_subscription_data.c  s6a_task.c  s6a_up_loc.c
src/sctp/: CMakeLists.txt  sctp_common.c  sctp_common.h  sctp_default_values.h  sctp_itti_messaging.c  sctp_itti_messaging.h  sctp_primitives_client.c  sctp_primitives_client.h  sctp_primitives_server.c  sctp_primitives_server.h
src/secu/: CMakeLists.txt  etsi_ts_135_206_V10.0.0_annex3.c  etsi_ts_135_206_V10.0.0_annex3.h  kdf.c  key_nas_deriver.c  key_nas_encryption.c  nas_stream_eea1.c  nas_stream_eea2.c  nas_stream_eia1.c  nas_stream_eia2.c  rijndael.c  rijndael.h  secu_defs.h  snow3g.c  snow3g.h  usim_authenticate.c  usim_authenticate.h
src/sgw/: CMakeLists.txt  pgw_config.c  pgw_config.h  pgw_lite_paa.c  sgw.h  (+26 more)
(+3245 files in other folders)
